--- a/lab3/CMakeLists.txt
+++ b/lab3/CMakeLists.txt
@@ -3,4 +3,4 @@ project(lab3)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(lab3  mklinkedlist.cpp mkarray.h main.cpp)
+add_executable(lab3  mklinkedlist.cpp mkarray.h mkstack.h main.cpp mathparser.h)
